SwipeDelegate: reposition contentItem, background on width changes

Change-Id: I6af4f1a4517e79f2e34b0bbca401b0eefd0c6ff4
Task-number: QTBUG-54660
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>